Sun May 10 22:20:38 CEST 2009 Guido Günther <agx@sigxcpu.org>

	update .gitignore files
	* src/.gitignore: add DBUS service file
	* preferences/.gitignore: new file

Sun May 10 22:10:11 CEST 2009 Guido Günther <agx@sigxcpu.org>

	make checking for deprecated symbols easy
	* src/Makefile.am: add $(DISABLE_DEPRECATED)
	* preferences/Makefile.am: likewise
	* configure.ac: add GNOME_MAINTAINER_MODE_DEFINES commented out

Sun May 10 21:49:14 CEST 2009 Guido Günther <agx@sigxcpu.org>

	Use po/LINGUAS instead of putting the list in configure.ac
	* configure.ac: remove ALL_LINGUAS and require intltool >= 0.35
	* po/LINGUAS: new file
	* autogen.sh: require intltool >= 0.35
	BZ: #581907 - patch by Christian Persch

Sun May 10 21:36:48 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-gconf-tools.c: fix -Wformat-security warnings
	* src/krb5-auth-gconf.c: likewise
	* etopo/lexer.l: likewise
	BZ: #581902 - patch by Christian Persch

Thu May  7 10:39:32 CEST 2009 Guido Günther <agx@sigxcpu.org>

	Switch from Libglade to GtkBuilder
	* src/krb5-auth-dialog.xml: new file
	* preferences/krb5-auth-dialog-preferences.xml: likewise
	* src/krb5-auth-dialog.glade: remove
	* preferences/krb5-auth-dialog-preferences.glade: likewise
	* src/krb5-auth-{applet,pwdialog}.[ch]: use GtkBuilder instead of
	  glade
	* configure.ac: drop libglade check
	* po/POTFILES.in: look for krb5-auth-dialog{,-preferences}.xml instead
	  of .glade
	* {src,preferences,etpo}/Makefile.am: drop libglade

Sun May  3 17:33:22 CEST 2009 Guido Günther <agx@sigxcpu.org>

	fix build with GLib < 2.18
	* configure.ac: check for gio
	* src/Makefile.am: add GIO to LDADD
	* src/krb5-auth-dialog.c: add missing gio.h include

Sun May  3 17:31:36 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-dialog-preferences.c (ka_preferences_dialog_response):
	  Fix compilation with GTK+ < 2.14.

Sun May  3 16:43:22 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* Makefile.am: ship MAINTAINERS
