@@ -1,25 +1,31 @@
 NULL =
 
-INCLUDES = \
-	-I $(top_srcdir)/src/ \
-	-DKA_DATA_DIR=\""$(pkgdatadir)"\" \
-	-DLOCALE_DIR=\""$(localedir)/"\" \
-	$(NULL)
-
 bin_PROGRAMS = krb5-auth-dialog-preferences
 
 schemadir = $(sysconfdir)/gconf/schemas
 
 krb5_auth_dialog_preferences_SOURCES = \
 	krb5-auth-dialog-preferences.c \
-	../src/krb5-auth-gconf-tools.c \
-	../src/krb5-auth-gconf-tools.h \
+	$(top_srcdir)/src/krb5-auth-gconf-tools.c \
+	$(top_srcdir)/src/krb5-auth-gconf-tools.h \
 	$(NULL)
 
+krb5_auth_dialog_preferences_CPPFLAGS = \
+	-I$(top_srcdir)/src \
+	-DKA_DATA_DIR=\""$(pkgdatadir)"\" \
+	-DLOCALE_DIR=\""$(localedir)/"\"
+	$(AM_CPPFLAGS)
+
+krb5_auth_dialog_preferences_CFLAGS = \
+	$(GTK_CFLAGS) \
+	$(GCONF_CFLAGS) \
+	$(AM_CFLAGS)
+
+
 krb5_auth_dialog_preferences_LDADD = \
-			@GCONF_LIBS@ \
-			@GTK_LIBS@ \
-			$(NULL)
+	$(GCONF_LIBS) \
+	$(GTK_LIBS) \
+	$(NULL)
 
 AM_CPPFLAGS = \
 	$(DISABLE_DEPRECATED) \
