@@ -1,9 +1,5 @@
 NULL =
 
-INCLUDES = \
-	-DKA_DATA_DIR=\""$(pkgdatadir)"\" \
-	-DLOCALE_DIR=\""$(localedir)/"\"
-
 bin_PROGRAMS = krb5-auth-dialog
 man_MANS = krb5-auth-dialog.1
 
@@ -39,21 +35,44 @@ krb5_auth_dialog_SOURCES =	\
 	krb5-auth-gconf-tools.h	\
 	krb5-auth-dbus.c	\
 	krb5-auth-dbus.h	\
-	dummy-strings.c
+	dummy-strings.c		\
+	$(NULL)
+
+krb5_auth_dialog_CPPFLAGS = \
+	-I$(top_srcdir)/gtksecentry \
+	-I$(top_srcdir)/secmem \
+	-DKA_DATA_DIR=\""$(pkgdatadir)"\" \
+	-DLOCALE_DIR=\""$(localedir)/"\"
+	$(AM_CPPFLAGS) \
+	$(NULL)
+
+krb5_auth_dialog_CFLAGS = \
+	$(GTK_CFLAGS) \
+	$(DBUS_CFLAGS) \
+	$(GCONF_CFLAGS) \
+	$(KRB5_CFLAGS) \
+	$(NETWORK_MANAGER_CFLAGS) \
+	$(LIBNOTIFY_CFLAGS) \
+	$(WARN_CFLAGS) \
+	$(AM_CFLAGS) \
+	$(NULL)
 
 krb5_auth_dialog_LDADD = \
-			../gtksecentry/libgtksecentry.a \
-			../secmem/libsecmem.a \
-			@NETWORK_MANAGER_LIBS@ \
-			@KRB5_LIBS@ \
-			@LIBNOTIFY_LIBS@ \
-			@DBUS_LIBS@ \
-			@GCONF_LIBS@ \
-			@GIO_LIBS@ \
-			@GTK_LIBS@
+	$(top_builddir)/gtksecentry/libgtksecentry.a \
+	$(top_builddir)/secmem/libsecmem.a \
+	$(NETWORK_MANAGER_LIBS) \
+	$(LIBCAP) \
+	$(KRB5_LIBS) \
+	$(LIBNOTIFY_LIBS) \
+	$(DBUS_LIBS) \
+	$(GCONF_LIBS) \
+	$(GIO_LIBS) \
+	$(GTK_LIBS) \
+	$(NULL)
 
 BUILT_SOURCES = \
-	krb5-auth-applet-dbus-glue.h
+	krb5-auth-applet-dbus-glue.h \
+	$(NULL)
 
 krb5-auth-applet-dbus-glue.h: $(srcdir)/krb5-auth-applet-dbus.xml
 	dbus-binding-tool                 \
@@ -68,18 +87,22 @@ AM_CPPFLAGS = \
 	$(NULL)
 
 pkgdatadir = $(datadir)/krb5-auth-dialog
-pkgdata_DATA =			\
-	krb5-auth-dialog.xml
+pkgdata_DATA = \
+	krb5-auth-dialog.xml \
+	$(NULL)
 
-EXTRA_DIST =		\
-	$(pkgdata_DATA)   \
+EXTRA_DIST = \
+	$(pkgdata_DATA) \
 	$(schema_in_files) \
 	$(autostart_in_files) \
 	$(service_in_files) \
 	$(srcdir)/krb5-auth-applet-dbus.xml \
-	krb5-auth-dialog.1.in
+	krb5-auth-dialog.1.in \
+	$(NULL)
 
 CLEANFILES = $(schema_DATA) $(service_DATA)
 DISTCLEANFILES = \
-	krb5-auth-dialog.desktop 	\
-	krb5-auth-applet-dbus-glue.h
+	krb5-auth-dialog.desktop \
+	krb5-auth-applet-dbus-glue.h \
+	$(NULL)
+
