@@ -1,3 +1,13 @@
+Mon May 11 00:46:24 CEST 2009 Guido Günther <agx@sigxcpu.org>
+
+	cleanup CFLAGS handling, terminate all lists with $(NULL)
+	* configure.ac: don't set CFLAGS
+	* src/Makefile.am (krb5_auth_dialog_{CPP,C}FLAGS): set instead of
+	  CFLAGS
+	* preferences/Makefile.am (krb5_auth_dialog_preferenes_{CPP,C}FLAGS):
+	  likewise
+	BZ: #581901 - based on a patch by Christian Persch
+
 Sun May 10 22:20:38 CEST 2009 Guido Günther <agx@sigxcpu.org>
 
 	update .gitignore files
